// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should correctly render Expenses Summary with 1 expense 1`] = `
<section
  className="summary"
>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</section>
`;

exports[`Should correctly render Expenses Summary with multiple expenses 1`] = `
<section
  className="summary"
>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,352,348,273.49
  </h1>
</section>
`;
